# flashcard

./: Cargo.toml  readme.md
cards/: chinese_1.txt
src/: args.rs  features.rs  lib.rs  main.rs
