[package]
name = "flcard"
authors = ["Zi Hao Liang"]
description = "Barebones flashcard system"
version = "1.0.1"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/CarbonFlora/flashcard"
license = "Apache-2.0"
keywords = ["cli", "terminal","flashcards"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.0"
colored = "2.0.0"
rand = "0.8.5"
